[package]
name = "bedrock-hole"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
chrono = "0.4.43"
anyhow = "1.0.100"
tracing-subscriber = "0.3.22"
async-trait = "0.1.89"
socket2 = "0.6.2"
