[package]
name = "bedrock-hole"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
anyhow = "1"
async-trait = "0.1.89"
